<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="247dp"
        tools:layout_editor_absoluteY="0dp"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:minHeight="?attr/actionBarSize"
            android:titleTextColor="@android:color/white">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/btn_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:src="@drawable/icons_back_white" />


                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/account_mutation"
                    android:layout_marginLeft="125dp"
                    android:textColor="@color/white"/>



            </LinearLayout>


        </android.support.v7.widget.Toolbar>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/account_number"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:textColor="@color/black"
            android:shadowColor="@color/black"
            />

        <EditText
            android:id="@+id/txt_norek"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:layout_gravity="center"
            android:background="@drawable/rounded_edittext"
            android:backgroundTint="@color/greyDisabled"
            android:ellipsize="start"
            android:ems="10"
            android:gravity="left|center"
            android:editable="false"
            android:text="@string/norek"
            android:textStyle="bold"
            android:textColor="@color/greyText"
            android:paddingLeft="15dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/transaction_type"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:textColor="@color/black"
            />
        <Spinner
            android:id="@+id/sp_transaction_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"/>


    </LinearLayout>
</android.support.constraint.ConstraintLayout>